--- a/styles/price.css
+++ b/styles/price.css
@@ -37,17 +37,17 @@
     background-image: url(../img/line_of_products/кроссовок_1.png);
 }
 .block_odegda:nth-child(2) {
-    background-image: url(../img/line_of_products/кроссовок_1.png);
+    background-image: url(../img/line_of_products/футболка_1.png);
 }
 .block_odegda:nth-child(3) {
-    background-image: url(../img/line_of_products/кроссовок_1.png);
+    background-image: url(../img/line_of_products/куртка_1.png);
 }
 .block_odegda:nth-child(4) {
-    background-image: url(../img/line_of_products/кроссовок_1.png);
+    background-image: url(../img/line_of_products/кроссовок_2_о.png);
 }
 .block_odegda:nth-child(5) {
-    background-image: url(../img/line_of_products/кроссовок_1.png);
+    background-image: url(../img/line_of_products/рубашка.png);
 }
 .block_odegda:nth-child(6) {
-    background-image: url(../img/line_of_products/кроссовок_1.png);
+    background-image: url(../img/line_of_products/кроссовок_2_с.png);
 }
